force-app/main/default/objects/Status_Report__c/Status_Report__c.object-meta.xml
<CustomObject>
    <description>Capture inventory for a given Department and patient details. New inventory items or patient statuses can be added and tracked depending on the need of the Department</description>
    <label>Status Report</label>
    <nameField>
        <label>Status Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>