force-app/main/default/objects/Status_Report__c/fields/Aggregate_Send_Error__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Send_Error__c</fullName>
    <label>Aggregate Send Error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>