force-app/main/default/objects/Status_Report__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The type of data being tracked e.g. Equipment, Supplies</description>
    <inlineHelpText>The type of data being tracked</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status_Report_Category</valueSetName>
    </valueSet>
</CustomField>