force-app/main/default/objects/Status_Report__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <description>The amount of what you are tracking</description>
    <inlineHelpText>The amount</inlineHelpText>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>