force-app/main/default/objects/Status_Report__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <description>The time this was recorded</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>The time this was recorded</inlineHelpText>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>