force-app/main/default/objects/Status_Report__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>The location this status report is for.</description>
    <inlineHelpText>The location this status report is for.</inlineHelpText>
    <label>Department</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Status Reports</relationshipLabel>
    <relationshipName>Status_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>