force-app/main/default/objects/Status_Report__c/fields/Is_Sent_To_Aggregator__c.field-meta.xml
<CustomField>
    <fullName>Is_Sent_To_Aggregator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sent To Aggregator</label>
    <type>Checkbox</type>
</CustomField>