force-app/main/default/objects/Status_Report__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>These are the individual status report records by the core data point being tracked.</description>
    <inlineHelpText>These are the individual status report records by the core data point being tracked.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status_Report_Type</valueSetName>
    </valueSet>
</CustomField>