force-app/main/default/objects/Status_Report__c/validationRules/Count_must_be_non_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Count_must_be_non_negative</fullName>
    <active>true</active>
    <description>The count cannot be negative</description>
    <errorConditionFormula>Count__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Count__c</errorDisplayField>
    <errorMessage>You must enter a positive number</errorMessage>
</ValidationRule>