force-app/main/default/objects/Status_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Department__c</columns>
    <columns>Category__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Count__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>